--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <div class="homepage">
-    <h1>Welcome to Thec Journal</h1>
+    <h1>Welcome to Thech Journal</h1>
     <nav>
         <a href="/">Home</a>
         <a href="/profile">Profile</a>
