fix home sign up

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
             <a href="/logout">Logout</a>
         {{else}}
             <a href="/login">Login</a>
-            <a href="/signup">Sign Up</a>
+            <a href="/login">Sign Up</a>
         {{/if}}
     </nav>
     <div class="journals">
@@ -15,23 +15,6 @@
             <div class="journal">
                 <h2><a href="/journals/{{id}}">{{title}}</a></h2>
                 <p>Posted on {{dateCreated}}</p>
-                
-                <!-- Comments Section -->
-                <ul>
-                    {{#each comments}}
-                        <li>{{this.content}} - {{this.user.username}}</li>
-                    {{/each}}
-                </ul>
-
-                <!-- Comment Form -->
-                {{#if loggedIn}}
-                <form class="comment-form" data-post-id="{{id}}">
-                    <textarea name="comment" placeholder="Add a comment..." required></textarea>
-                    <button type="submit">Submit</button>
-                </form>
-                {{else}}
-                <p>Please <a href="/login">login</a> to add a comment.</p>
-                {{/if}}
             </div>
         {{else}}
             <p>No tech journal available.</p>
