remove main folder

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-      <span for="img" aria-label="laptop">💻</span>
+      <span for="img" aria-label="laptop">💻</span>`;
 
         <a href="/">Thech Journal</a>
       </h1>
