--- a/views/journal.handlebars
+++ b/views/journal.handlebars
@@ -13,7 +13,7 @@
         {{/each}}
         {{#if loggedIn}}
             <form id="comment-form">
-                <textarea name="comment" placeholder="Leave a comment..."></textarea>
+                <textarea username="comment" placeholder="Leave a comment..."></textarea>
                 <button type="submit">Submit</button>
             </form>
         {{else}}
@@ -21,3 +21,5 @@
         {{/if}}
     </div>
 </div>
+
+<script src="./js/profile.js"></script>
