--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,20 +1,20 @@
 <div class="homepage">
     <h1>Welcome to Thech Journal</h1>
-    {{!-- <nav>
+    <nav>
         <a href="/">Home</a>
         <a href="/profile">Profile</a>
-        {{#if logged_in}}
+        {{#if loggedIn}}
             <a href="/logout">Logout</a>
         {{else}}
             <a href="/login">Login</a>
             <a href="/login">Sign Up</a>
         {{/if}}
-    </nav> --}}
+    </nav>
     <div class="journals">
-        {{#each journals}}
+        {{#each posts}}
             <div class="journal">
                 <h2><a href="/journals/{{id}}">{{title}}</a></h2>
-                <p>Posted on {{date_created}} by {{user.name}} </p>
+                <p>Posted on {{dateCreated}}</p>
             </div>
         {{else}}
             <p>No tech journal available.</p>
