--- a/views/journal.handlebars
+++ b/views/journal.handlebars
@@ -2,7 +2,7 @@
     <h2>{{title}}</h2>
     <p>By {{user.name}} on {{date_created}}</p>
     <div class="journal-content">
-        {{{content}}}
+        {{{description}}}
     </div>
     <div class="comments">
         <h3>Comments</h3>
