--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,6 +14,7 @@
         {{#each journals}}
             <div class="journal">
                 <h2><a href="/journals/{{id}}">{{title}}</a></h2>
+                <p>{{description}}</p>
                 <p>Posted on {{date_created}} by {{user.name}} </p>
             </div>
         {{else}}
